--- a/index.html
+++ b/index.html
@@ -435,6 +435,27 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-container">
+          <p class="footer-subscribe-caption">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+          <form class="subscribe-form" autocomplete="off">
+            <label for="footer-email" class="hidden-caption">E-mail</label>
+            <input
+              class="subscribe-form-email"
+              type="email"
+              name="email"
+              id="footer-email"
+              placeholder="E-mail"
+            />
+            <button class="footer-button" type="submit">
+              <span class="footer-button-content">
+                Подписаться
+                <svg class="footer-button-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </span>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div data-modal class="backdrop is-hidden">
@@ -444,6 +465,55 @@
             <use href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
+        <strong class="form-title">Оставьте свои данные, мы вам перезвоним</strong>
+        <form class="modal-form">
+          <label class="form-group">
+            <span class="form-label">Имя</span>
+            <input class="form-input" type="text" name="user-name" />
+            <span class="form-input-container"></span>
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-person"></use>
+            </svg>
+          </label>
+          <label class="form-group">
+            <span class="form-label">Телефон</span>
+            <input class="form-input" type="fone" name="user-fone" />
+            <span class="form-input-container"></span>
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-phone-user"></use>
+            </svg>
+          </label>
+          <label class="form-group">
+            <span class="form-label">Почта</span>
+            <input class="form-input" type="email" name="user-male" />
+            <span class="form-input-container"></span>
+            <svg class="form-icon" width="18" height="18">
+              <use href="./images/symbol-defs.svg#icon-email-user"></use>
+            </svg>
+          </label>
+          <label class="form-textarea">
+            <span class="form-label">Комментарий</span>
+            <textarea
+              class="form-comments"
+              name="comment-form"
+              placeholder="Введите текст"
+            ></textarea>
+          </label>
+          <label class="form-polisy-group">
+            <span class="checkbox-container">
+              <input class="checkbox" type="checkbox" />
+                <svg class="custom-checkbox-icon" width="16" height="15">
+                  <use href="./images/symbol-defs.svg#icon-checkbox"></use>
+                </svg>
+                <span class="checkbox-icon-unchecked"></span>
+              </span>
+              <span class="form-polisy-decs">
+                Соглашаюсь с рассылкой и принимаю <a class="checkbox-label-link" href="">Условия договора</a></span
+              >
+            </span>
+          </label>
+          <button class="btn submit-btn" type="submit">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
