--- a/portfolio.html
+++ b/portfolio.html
@@ -314,6 +314,27 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-container">
+          <p class="footer-subscribe-caption">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+          <form class="subscribe-form" autocomplete="off">
+            <label for="footer-email" class="hidden-caption">E-mail</label>
+            <input
+              class="subscribe-form-email"
+              type="email"
+              name="email"
+              id="footer-email"
+              placeholder="E-mail"
+            />
+            <button class="footer-button" type="submit">
+              <span class="footer-button-content">
+                Подписаться
+                <svg class="footer-button-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-send"></use>
+                </svg>
+              </span>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
