--- a/index.html
+++ b/index.html
@@ -469,27 +469,30 @@
         <form class="modal-form">
           <label class="form-group">
             <span class="form-label">Имя</span>
-            <input class="form-input" type="text" name="user-name" />
-            <span class="form-input-container"></span>
-            <svg class="form-icon" width="18" height="18">
-              <use href="./images/symbol-defs.svg#icon-person"></use>
-            </svg>
+            <div class="form-input-container">
+              <input class="form-input" type="text" name="user-name" required />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-person"></use>
+              </svg>
+            </div>
           </label>
           <label class="form-group">
             <span class="form-label">Телефон</span>
-            <input class="form-input" type="fone" name="user-fone" />
-            <span class="form-input-container"></span>
-            <svg class="form-icon" width="18" height="18">
-              <use href="./images/symbol-defs.svg#icon-phone-user"></use>
-            </svg>
+            <div class="form-input-container">
+              <input class="form-input" type="fone" name="user-fone" required />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-phone-user"></use>
+              </svg>
+            </div>
           </label>
           <label class="form-group">
             <span class="form-label">Почта</span>
-            <input class="form-input" type="email" name="user-male" />
-            <span class="form-input-container"></span>
-            <svg class="form-icon" width="18" height="18">
-              <use href="./images/symbol-defs.svg#icon-email-user"></use>
-            </svg>
+            <div class="form-input-container">
+              <input class="form-input" type="email" name="user-male" required />
+              <svg class="form-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-email-user"></use>
+              </svg>
+            </div>
           </label>
           <label class="form-textarea">
             <span class="form-label">Комментарий</span>
@@ -500,16 +503,15 @@
             ></textarea>
           </label>
           <label class="form-polisy-group">
-            <span class="checkbox-container">
-              <input class="checkbox" type="checkbox" />
-                <svg class="custom-checkbox-icon" width="16" height="15">
-                  <use href="./images/symbol-defs.svg#icon-checkbox"></use>
-                </svg>
-                <span class="checkbox-icon-unchecked"></span>
-              </span>
-              <span class="form-polisy-decs">
-                Соглашаюсь с рассылкой и принимаю <a class="checkbox-label-link" href="">Условия договора</a></span
-              >
+            <input class="visually-hidden-checkbox checkbox" type="checkbox" required />
+            <span class="custom-checkbox">
+              <svg class="custom-checkbox-icon" width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-checkbox"></use>
+              </svg>
+            </span>
+            <span class="form-polisy-decs">
+              Соглашаюсь с рассылкой и принимаю
+              <a class="checkbox-label-link" href="">Условия договора</a>
             </span>
           </label>
           <button class="btn submit-btn" type="submit">Отправить</button>
